--- a/client/src/app/components/stardust/TransactionPayload.scss
+++ b/client/src/app/components/stardust/TransactionPayload.scss
@@ -83,7 +83,7 @@
     }
   }
 
-  .transaction-from.card--content .card--content__output {
+  .transaction.card--content .card--content__output {
       padding: 0 0;
   }
 }
