--- a/client/src/scss/card.scss
+++ b/client/src/scss/card.scss
@@ -215,7 +215,7 @@
 
     .card--content__input {
       display: flex;
-      margin-bottom: 20px;
+      margin-bottom: 0px;
 
       .color {
         color: #108cff;
